# facharbeit

./: CMakeLists.txt  bubble_sort.h  counting_sort.h  definitions.h  heapsort.h  insertion_sort.h  intro_sort.h  main.cpp  quick_sort.h  quicksort.h  utils.h
results/: first_implementation.xlsx  intro_sort_vs_std_sort.xlsx  three_way_quicksort.xlsx  three_way_quicksort_many_equal_vs_many_different.xlsx  worst_case_quicksort_vs_quicksort_median_of_three.xlsx  worst_case_quicksort_vs_three_way_quicksort.xlsx
results/many_different/: average_case_results.xlsx  heapsort.xlsx  insertion_sort.xlsx  intro_sort.xlsx  many_different_quicksort_v_three_way_quicksort.xlsx  quicksort.xlsx  quicksort_median_of_three.xlsx  std_sort.xlsx  three_way_quicksort.xlsx
results/many_equal/: average_case_results.xlsx  heapsort.xlsx  insertion_sort.xlsx  intro_sort.xlsx  quicksort.xlsx  quicksort_median_of_three.xlsx  std_sort.xlsx  three_way_quicksort.xlsx
v1/: bubble_sort_v1.h  counting_sort_v1.h  heapsort_v1.h  insertion_sort_v1.h  main_v1.cpp  merge_sort_v1.h  quick_sort_v1.h  quicksort_v1.h
v2/: main.cpp  main_v2.cpp  quick_sort_v2.h  quicksort_v2.h
v3/: main_v3.cpp  quick_sort_v3.h  quicksort_v3.h
v4/: main_v4.cpp  quick_sort_v4.h
